force-app/main/default/objects/Case/fields/Campo_novo__c.field-meta.xml
<CustomField>
    <fullName>Campo_novo__c</fullName>
    <label>Campo novo</label>
    <length>22</length>
    <type>Text</type>
</CustomField>