force-app/main/default/objects/Case/fields/Campo_novo_modificado__c.field-meta.xml
<CustomField>
    <fullName>Campo_novo_modificado__c</fullName>
    <label>Campo novo  Modificado</label>
    <length>22</length>
    <type>Text</type>
</CustomField>