force-app/main/default/objects/Case/fields/Coffee_talk__c.field-meta.xml
<CustomField>
    <fullName>Coffee_talk__c</fullName>
    <label>Coffee talk</label>
    <length>22</length>
    <type>Text</type>
</CustomField>