force-app/main/default/objects/Case/fields/Modificado__c.field-meta.xml
<CustomField>
    <fullName>Modificado__c</fullName>
    <label>Modificado</label>
    <length>22</length>
    <type>Text</type>
</CustomField>