force-app/main/default/objects/Case/fields/NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>NEW_FIELD__c</fullName>
    <label>NEW FIELD</label>
    <length>22</length>
    <type>Text</type>
</CustomField>