force-app/main/default/objects/Case/fields/Tech_name__c.field-meta.xml
<CustomField>
    <fullName>Tech_name__c</fullName>
    <label>Tech name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>