force-app/main/default/objects/Case/fields/Text_devops_new__c.field-meta.xml
<CustomField>
    <fullName>Text_devops_new__c</fullName>
    <label>Text devops new</label>
    <length>22</length>
    <type>Text</type>
</CustomField>